# FarmApp

./: .gitignore  manage.py  pyproject.toml
farm/: admin.py  models.py  views.py
farm/migrations/: 0001_initial.py  0002_rename_animals_animal.py  0003_field_species_storage_remove_animal_animal_type_and_more.py
farm/templates/farm/: base.html  footer.html  header.html  index.html  login.html  sidebar.html
farm/templates/registration/: login.html
farmapp_project/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
